--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
     <h1>Counter</h1>
   </header>
   <main>
-    <h2>Current Count is:0</h2>
+    <h2>Current Count is:{{count}}</h2>
   </main>
-  <button>Reset Count</button>
-  <button>Increase Count</button>
-  <button>Decrease Count</button>
+  <div class="btn">
+  <button (click)="hundleIncrease()">Increase Count</button>
+  <button (click)="hundleDecrease()">Decrease Count</button>
+  <button (click)="hundleReset()">Reset Count</button>
+</div>
 </div>
